fix(YSP-289): fix z-index in dropdown menu content

--- a/components/03-organisms/menu/utility-nav/_yds-utility-nav.scss
+++ b/components/03-organisms/menu/utility-nav/_yds-utility-nav.scss
@@ -163,6 +163,7 @@
     [data-header-theme] & {
       background-color: var(--color-background);
       border-color: var(--color-action);
+      z-index: 1;
     }
   }
 }
@@ -187,7 +188,7 @@
     color: var(--color-action);
     border-color: inherit;
     border-radius: 0;
-    z-index: 1;
+    z-index: 2;
 
     @media (min-width: tokens.$break-mobile) {
       padding-top: var(--size-spacing-4);
